2006-12-08  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Get back to split headers in getobjectpropertylist.

2006-12-04  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c: Fixed the response packet in-data-phase
	  handling to actually work. From libmtp folks.

2006-12-02  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Canon PowerShot SD600, HP Photosmart C500.

2006-12-01  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.[ch]: MTP devices might send the response packet
	  during data-in phase. Handle such a case.

	  Patch supplied by libmtp guys and adapted.

2006-11-30  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Added Microsoft Zune (not fully working!)
	* library.c: Added Sirius Stilletto.

2006-11-27  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptp-pack.c:
	  Bugfixes for GetObjProplist code.

2006-11-19  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c,ptp.h,ptp-pack.c:
	  From Libmtp folks:
	  Implemented MTP GetObjProplist opcode.

	  Handle the PTP violating READ (length 0xffffffff).

	* library.c: Added PowerShot G7.

2006-11-15  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Kodak C643, Samsung YP-K5.
	* library.c: added Creative Zen Vision W

2006-11-12  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.c, ptp.h, ptp-pack.c: Implementation of 
	MTP_SendObjectproplist from the libmtp folks.

	* library.c: added Creative Zen Vision M

2006-11-07  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Do incremental event read only for
	  actual PTP events.

	* library.c: added Nikon CoolPix L1, Kodak C530.
	* library.c: Added some HP Photosmarts, USB ids
	  extracted from the .INF files downloadable from hp.com.

2006-11-04  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon Digital IXUS 850 IS
	* library.c: removed pragma pack(1) ... umm.

2006-10-31  Marcus Meissner  <marcus@jet.franken.de>
	
	* library.c: Added Canon PowerShot A640.
	* library.c: Added Nikon D80.
	